# CLI-AGENT

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: cli.rs  conversation.rs  error.rs  main.rs
src/ai/: mod.rs
src/analyzer/: complexity.rs  gas.rs  interactions.rs  mod.rs  quality.rs  security.rs  size.rs
src/audit/: access_control.rs  ai_patterns.rs  l2_patterns.rs  memory_safety.rs  mod.rs  patterns.rs  report.rs  rules.rs  test_patterns.rs  vulnerabilities.rs
src/parser/: mod.rs
src/report/: mod.rs
src/stylus/: analyzer.rs  gas.rs  mod.rs  test_gen.rs  vulnerability.rs
test ex/: counter.rs  inefficient_token.rs  test_contract.rs  token.rs  vulnerable_staking.rs
