[package]
name = "stylus-analyzer"
version = "0.1.0"
edition = "2021"
description = "AI-powered Arbitrum Stylus smart contract analyzer"

[dependencies]
rig-core = "0.1"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
colored = "2.0"
async-trait = "0.1"
dotenv = "0.15"
solang-parser = "0.3"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
ethers = { version = "2.0.11", features = ["legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false